--- a/contrib/other-builds/score/.project
+++ b/contrib/other-builds/score/.project
@@ -28,22 +28,22 @@
 		<link>
 			<name>DomainFeature.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/DomainFeature.cpp</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/phrase-extract/DomainFeature.cpp</location>
 		</link>
 		<link>
 			<name>DomainFeature.h</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/DomainFeature.h</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/phrase-extract/DomainFeature.h</location>
 		</link>
 		<link>
 			<name>ExtractionPhrasePair.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/ExtractionPhrasePair.cpp</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/phrase-extract/ExtractionPhrasePair.cpp</location>
 		</link>
 		<link>
 			<name>ExtractionPhrasePair.h</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/ExtractionPhrasePair.h</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/phrase-extract/ExtractionPhrasePair.h</location>
 		</link>
 		<link>
 			<name>InputFileStream.cpp</name>
@@ -88,17 +88,22 @@
 		<link>
 			<name>Timer.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Timer.cpp</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/moses/Timer.cpp</location>
 		</link>
 		<link>
 			<name>Timer.h</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Timer.h</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/moses/Timer.h</location>
 		</link>
 		<link>
 			<name>Util.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Util.cpp</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/moses/Util.cpp</location>
+		</link>
+		<link>
+			<name>Util.h</name>
+			<type>1</type>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/moses/Util.h</location>
 		</link>
 		<link>
 			<name>exception.cc</name>
@@ -128,12 +133,12 @@
 		<link>
 			<name>usage.cc</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/util/usage.cc</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/util/usage.cc</location>
 		</link>
 		<link>
 			<name>usage.hh</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/util/usage.hh</location>
+			<location>/disk4/hieu/workspace/github/mosesdecoder.hieu/util/usage.hh</location>
 		</link>
 	</linkedResources>
 </projectDescription>
