dumb labelling - label constituent with character if start & end words begin with that character

--- a/contrib/other-builds/manual-label/Makefile
+++ b/contrib/other-builds/manual-label/Makefile
@@ -6,7 +6,7 @@ clean:
 .cpp.o:
 	g++ -I../../../boost/include -I../../../ -O3 -g -c $<
 
-OBJECTS = DeEn.o EnOpenNLPChunker.o EnPhrasalVerb.o Main.o 
+OBJECTS = DeEn.o EnOpenNLPChunker.o EnPhrasalVerb.o Main.o LabelByInitialLetter.o
 
 manual-label: $(OBJECTS)
 	g++ $(OBJECTS)  -L../../../boost/lib64  -lz -lboost_program_options-mt -o manual-label
