--- a/contrib/other-builds/score/.project
+++ b/contrib/other-builds/score/.project
@@ -28,22 +28,22 @@
 		<link>
 			<name>DomainFeature.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/DomainFeature.cpp</location>
+			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/DomainFeature.cpp</locationURI>
 		</link>
 		<link>
 			<name>DomainFeature.h</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/DomainFeature.h</location>
+			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/DomainFeature.h</locationURI>
 		</link>
 		<link>
 			<name>ExtractionPhrasePair.cpp</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/ExtractionPhrasePair.cpp</location>
+			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/ExtractionPhrasePair.cpp</locationURI>
 		</link>
 		<link>
 			<name>ExtractionPhrasePair.h</name>
 			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/phrase-extract/ExtractionPhrasePair.h</location>
+			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/ExtractionPhrasePair.h</locationURI>
 		</link>
 		<link>
 			<name>InputFileStream.cpp</name>
@@ -86,21 +86,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/ScoreFeature.h</locationURI>
 		</link>
 		<link>
-			<name>Timer.cpp</name>
-			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Timer.cpp</location>
-		</link>
-		<link>
-			<name>Timer.h</name>
-			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Timer.h</location>
-		</link>
-		<link>
-			<name>Util.cpp</name>
-			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/moses/Util.cpp</location>
-		</link>
-		<link>
 			<name>exception.cc</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/util/exception.cc</locationURI>
@@ -124,16 +109,6 @@
 			<name>tables-core.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/phrase-extract/tables-core.h</locationURI>
-		</link>
-		<link>
-			<name>usage.cc</name>
-			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/util/usage.cc</location>
-		</link>
-		<link>
-			<name>usage.hh</name>
-			<type>1</type>
-			<location>/home/hieu/workspace/github/mosesdecoder/util/usage.hh</location>
 		</link>
 	</linkedResources>
 </projectDescription>
