--- a/contrib/other-builds/score/.project
+++ b/contrib/other-builds/score/.project
@@ -3,6 +3,8 @@
 	<name>score</name>
 	<comment></comment>
 	<projects>
+		<project>moses</project>
+		<project>util</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
