--- a/contrib/m4m/Makefile
+++ b/contrib/m4m/Makefile
@@ -1,2 +1,2 @@
 merge-sorted:
-	g++ util/merge-sorted.cc -o $@ -lboost_iostreams -lboost_program_options -lbz2 -I ../..  ../../moses/TranslationModel/UG/generic/file_io/ug_stream.cpp -lz
+	g++ -O3 -I ../.. util/merge-sorted.cc ../../moses/TranslationModel/UG/generic/file_io/ug_stream.cpp -o $@ -lboost_iostreams -lboost_program_options -lbz2 -lz 
