--- a/contrib/other-builds/extract-ordering/.cproject
+++ b/contrib/other-builds/extract-ordering/.cproject
@@ -131,4 +131,5 @@
 			<resource resourceType="PROJECT" workspacePath="/extract-ordering"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
