rename DuplicateWord -> NieceTerminal

--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1072,16 +1072,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/DistortionScoreProducer.h</locationURI>
 		</link>
 		<link>
-			<name>FF/DuplicateWord.cpp</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/DuplicateWord.cpp</locationURI>
-		</link>
-		<link>
-			<name>FF/DuplicateWord.h</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/DuplicateWord.h</locationURI>
-		</link>
-		<link>
 			<name>FF/ExternalFeature.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/ExternalFeature.cpp</locationURI>
@@ -1185,6 +1175,16 @@
 			<name>FF/MaxSpanFreeNonTermSource.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/MaxSpanFreeNonTermSource.h</locationURI>
+		</link>
+		<link>
+			<name>FF/NieceTerminal.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/NieceTerminal.cpp</locationURI>
+		</link>
+		<link>
+			<name>FF/NieceTerminal.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/FF/NieceTerminal.h</locationURI>
 		</link>
 		<link>
 			<name>FF/OSM-Feature</name>
