--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -542,6 +542,11 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/PDTAimp.h</locationURI>
 		</link>
 		<link>
+			<name>PP</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>Parameter.cpp</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/Parameter.cpp</locationURI>
@@ -1600,6 +1605,26 @@
 			<name>LM/backward.arpa</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/backward.arpa</locationURI>
+		</link>
+		<link>
+			<name>PP/Factory.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/PP/Factory.cpp</locationURI>
+		</link>
+		<link>
+			<name>PP/Factory.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/PP/Factory.h</locationURI>
+		</link>
+		<link>
+			<name>PP/PhraseProperty.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/PP/PhraseProperty.h</locationURI>
+		</link>
+		<link>
+			<name>PP/TreeStructurePhraseProperty.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/PP/TreeStructurePhraseProperty.h</locationURI>
 		</link>
 		<link>
 			<name>TranslationModel/BilingualDynSuffixArray.cpp</name>
