--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -2132,6 +2132,76 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/ProbingPT.h</locationURI>
 		</link>
 		<link>
+			<name>TranslationModel/ProbingPT/hash.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/hash.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/hash.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/hash.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/huffmanish.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/huffmanish.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/huffmanish.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/huffmanish.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/line_splitter.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/line_splitter.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/line_splitter.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/line_splitter.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/probing_hash_utils.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/probing_hash_utils.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/probing_hash_utils.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/probing_hash_utils.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/quering.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/quering.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/quering.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/quering.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/storing.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/storing.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/storing.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/storing.hh</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/vocabid.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/vocabid.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/ProbingPT/vocabid.hh</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/ProbingPT/vocabid.hh</locationURI>
+		</link>
+		<link>
 			<name>TranslationModel/RuleTable/Loader.h</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/RuleTable/Loader.h</locationURI>
